# py-crypt-sindresorhus-conf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
src/crypt_sindresorhus_conf/: __init__.py  crypt_sindresorhus_conf.py  crypt_sindresorhus_conf_cryptodome.py  crypt_sindresorhus_conf_pycryptodome.py
tests/: conf_read.mjs  conf_write.mjs  main.mjs  test_crypt_sindresorhus_conf.py
