[project]
name = "crypt-sindresorhus-conf"
dynamic = ["version"]

description = "Encrypts and decrypts 'sindresorhus/conf' files"
readme = "README.md"

[project.optional-dependencies]
cryptography = [
  'cryptography'
]
pycryptodome = [
  'pycryptodome'
]


[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
